--- a/_config.yml
+++ b/_config.yml
@@ -23,24 +23,24 @@ nav_exclude:                                            # The following paths ar
 
 ### Author Info ###
 author:
-  name              : John Doe
+  name              : Sanyog Lamsal
   image             : "/assets/images/san_dp.jpg"
-  behance           : your_username
+# behance           : your_username
 # dribbble          : your_username
-  email             : username@domain.com
+  email             : sanyoglamsal3@gmail.com
   facebook          : your_username
   github            : your_username
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
-  linkedin          : your_username
-  medium            : your_username
+  linkedin          : sanyoglamsal
+# medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
-  twitter           : your_username
+# twitter           : your_username
 # vimeo             : your_username
 # youtube           : your_channel_name
 # keybase           : your_username
