--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : Sanyog Lamsal's Portfolio
 description         : >-
-                      Let's see what this becomes.
+                      Hi, I am Sanyog. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 url                 : "https://www.slamsal.com"
 repository          : slamsal1/portfolio #Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
