--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ nav_exclude:                                            # The following paths ar
   - documentation/partials/04-adding-content.md
   - documentation/partials/06-credits.md
   - documentation/partials/05-dependencies.md
+  - documentation/docs.md
   
 
 
