--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : Sanyog Lamsal's Portfolio
 description         : >-
-                      Hi, I am Sanyog. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                      Hi, I am Sanyog. I am a skilled mechanical engineer specializing in Mechanical Design, CAD (SolidWorks), Mechatronic Systems Integration, and Instrumentation Systems. My expertise extends to Prototyping, Product Development, Hydraulics/Pneumatics Design, PLC Programming (Beckhoff TwinCAT3), System Modeling with MATLAB & Simulink, and Python for engineering tool development.
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 url                 : "https://www.slamsal.com"
 repository          : slamsal1/portfolio #Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
@@ -33,7 +33,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Sanyog Lamsal
-  image             : "/assets/images/san_dp.jpg"
+  image             : "/assets/images/pic.jpeg"
 # behance           : your_username
 # dribbble          : your_username
   email             : sanyoglamsal3@gmail.com
