--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Sanyog Lamsal
-  image             : "/assets/images/san_dp.jpg"
+  image             : "/assets/images/san_dp2.jpeg"
 # behance           : your_username
 # dribbble          : your_username
   email             : sanyoglamsal3@gmail.com
